<resources>
    <string name="app_name">Email_jan10</string>
    <string name="next">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="title">Mailboxes</string>
    <string name="main_mailboxes">Mailboxes</string>
    <string name="done">Done</string>
    <string name="special">Special folders</string>
    <string name="inboxes">All inboxes</string>
    <string name="iCloud">ICloud</string>
    <string name="gmail">Gmail</string>
    <string name="hotmail">Hotmail</string>
    <string name="vip">VIP</string>
    <string name="secure">Secure</string>
    <string name="notifications">Notifications</string>
</resources>